webkit-scrollbar-fix

--- a/assets/css/hud.css
+++ b/assets/css/hud.css
@@ -34,7 +34,7 @@ span{
     
 }
 
-.game::-webkit-scrollbar{
+::-webkit-scrollbar{
     width:0 !important; 
 }
 
